--- a/public/templates/css/style.css
+++ b/public/templates/css/style.css
@@ -2458,3 +2458,28 @@ section {
     height: 80px;
     align-content: center;
 }
+
+.btn-call {
+    width: 65px;
+    height: 65px;
+    padding: 7px 0px;
+    border-radius: 100% 20% 100% 100%;
+    text-align: center;
+    font-size: 32px;
+    line-height: 1.42857;
+    transition: 1s;
+    background-color: #00A39E;
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 10px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.btn-call:hover {
+    border-radius: 100% 100% 100% 20%;
+    background-color: #008C8A;
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+#fixedbutton {
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+}
