--- a/public/templates/css/style.css
+++ b/public/templates/css/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 a {
-    color: #4154f1;
+    color: #0ba59d;
     text-decoration: none;
 }
 
@@ -58,7 +58,7 @@ section {
     letter-spacing: 1px;
     font-weight: 700;
     margin: 0;
-    color: #4154f1;
+    color: #0ba59d;
     text-transform: uppercase;
 }
 
@@ -68,7 +68,7 @@ section {
     font-size: 38px;
     line-height: 42px;
     font-weight: 700;
-    color: #012970;
+    color: #0BA59D;
 }
 
 @media (max-width: 768px) {
@@ -85,7 +85,7 @@ section {
 
 .breadcrumbs {
     padding: 15px 0;
-    background: #012970;
+    background: #0BA59D;
     min-height: 40px;
     margin-top: 82px;
     color: #fff;
@@ -143,7 +143,7 @@ section {
     right: 15px;
     bottom: 15px;
     z-index: 99999;
-    background: #4154f1;
+    background: #0ba59d;
     width: 40px;
     height: 40px;
     border-radius: 4px;
@@ -199,7 +199,7 @@ section {
 }
 
 .header .logo img {
-    max-height: 40px;
+    max-height: 70px;
     margin-right: 6px;
 }
 
@@ -207,7 +207,7 @@ section {
     font-size: 30px;
     font-weight: 700;
     letter-spacing: 1px;
-    color: #012970;
+    color: #0BA59D;
     font-family: "Nunito", sans-serif;
     margin-top: 3px;
 }
@@ -247,7 +247,7 @@ section {
     font-family: "Nunito", sans-serif;
     font-size: 16px;
     font-weight: 700;
-    color: #013289;
+    color: #0ba59d;
     white-space: nowrap;
     transition: 0.3s;
 }
@@ -263,12 +263,12 @@ section {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-    color: #4154f1;
+    color: #444444;
 }
 
 .navbar .getstarted,
 .navbar .getstarted:focus {
-    background: #4154f1;
+    background: #0ba59d;
     padding: 8px 20px;
     margin-left: 30px;
     border-radius: 4px;
@@ -278,7 +278,7 @@ section {
 .navbar .getstarted:hover,
 .navbar .getstarted:focus:hover {
     color: #fff;
-    background: #5969f3;
+    background: #0dc4ba;
 }
 
 .navbar .dropdown ul {
@@ -315,7 +315,7 @@ section {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-    color: #4154f1;
+    color: #0ba59d;
 }
 
 .navbar .dropdown:hover>ul {
@@ -352,7 +352,7 @@ section {
 */
 
 .mobile-nav-toggle {
-    color: #012970;
+    color: #0BA59D;
     font-size: 28px;
     cursor: pointer;
     display: none;
@@ -408,13 +408,13 @@ section {
 .navbar-mobile a:focus {
     padding: 10px 20px;
     font-size: 15px;
-    color: #012970;
+    color: #0BA59D;
 }
 
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-    color: #4154f1;
+    color: #0ba59d;
 }
 
 .navbar-mobile .getstarted,
@@ -449,7 +449,7 @@ section {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-    color: #4154f1;
+    color: #0ba59d;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -472,7 +472,7 @@ section {
     margin: 0;
     font-size: 48px;
     font-weight: 700;
-    color: #012970;
+    color: #0ba59d;
 }
 
 .hero h2 {
@@ -488,7 +488,7 @@ section {
     border-radius: 4px;
     transition: 0.5s;
     color: #fff;
-    background: #4154f1;
+    background: #0ba59d;
     box-shadow: 0px 5px 30px rgba(65, 84, 241, 0.4);
 }
 
@@ -566,14 +566,14 @@ section {
 .about h3 {
     font-size: 14px;
     font-weight: 700;
-    color: #4154f1;
+    color: #0ba59d;
     text-transform: uppercase;
 }
 
 .about h2 {
     font-size: 24px;
     font-weight: 700;
-    color: #012970;
+    color: #0ba59d;
 }
 
 .about p {
@@ -587,7 +587,7 @@ section {
     border-radius: 4px;
     transition: 0.5s;
     color: #fff;
-    background: #4154f1;
+    background: #0ba59d;
     box-shadow: 0px 5px 25px rgba(65, 84, 241, 0.3);
 }
 
@@ -629,7 +629,7 @@ section {
 
 .values .box h3 {
     font-size: 24px;
-    color: #012970;
+    color: #0ba59d;
     font-weight: 700;
     margin-bottom: 18px;
 }
@@ -664,7 +664,7 @@ section {
     font-size: 42px;
     line-height: 0;
     margin-right: 20px;
-    color: #4154f1;
+    color: #0ba59d;
 }
 
 .counts .count-box span {
@@ -695,7 +695,7 @@ section {
 
 .features .feature-box h3 {
     font-size: 18px;
-    color: #012970;
+    color: #0BA59D;
     font-weight: 700;
     margin: 0;
 }
@@ -711,7 +711,7 @@ section {
 }
 
 .features .feature-box:hover i {
-    background: #4154f1;
+    background: #0ba59d;
     color: #fff;
 }
 
@@ -720,7 +720,7 @@ section {
 }
 
 .features .feture-tabs h3 {
-    color: #012970;
+    color: #0BA59D;
     font-weight: 700;
     font-size: 32px;
     margin-bottom: 10px;
@@ -741,7 +741,7 @@ section {
     text-transform: uppercase;
     font-size: 15px;
     font-weight: 600;
-    color: #012970;
+    color: #0BA59D;
     padding: 12px 0;
     margin-right: 25px;
     margin-bottom: -2px;
@@ -749,22 +749,22 @@ section {
 }
 
 .features .feture-tabs .nav-link.active {
-    color: #4154f1;
-    border-bottom: 3px solid #4154f1;
+    color: #0ba59d;
+    border-bottom: 3px solid #0ba59d;
 }
 
 .features .feture-tabs .tab-content h4 {
     font-size: 18px;
     margin: 0;
     font-weight: 700;
-    color: #012970;
+    color: #444444;
 }
 
 .features .feture-tabs .tab-content i {
     font-size: 24px;
     line-height: 0;
     margin-right: 8px;
-    color: #4154f1;
+    color: #0ba59d;
 }
 
 .features .feature-icons {
@@ -772,7 +772,7 @@ section {
 }
 
 .features .feature-icons h3 {
-    color: #012970;
+    color: #0BA59D;
     font-weight: 700;
     font-size: 32px;
     margin-bottom: 20px;
@@ -793,13 +793,13 @@ section {
     font-size: 20px;
     font-weight: 700;
     margin: 0 0 10px 0;
-    color: #012970;
+    color: #444444;
 }
 
 .features .feature-icons .content .icon-box i {
     font-size: 44px;
     line-height: 44px;
-    color: #0245bc;
+    color: #0ba59d;
     margin-right: 15px;
 }
 
@@ -1038,18 +1038,18 @@ section {
     display: inline-block;
     padding: 8px 40px 10px 40px;
     border-radius: 50px;
-    color: #4154f1;
+    color: #0ba59d;
     transition: none;
     font-size: 16px;
     font-weight: 400;
     font-family: "Nunito", sans-serif;
     font-weight: 600;
     transition: 0.3s;
-    border: 1px solid #4154f1;
+    border: 1px solid #0ba59d;
 }
 
 .pricing .btn-buy:hover {
-    background: #4154f1;
+    background: #0ba59d;
     color: #fff;
 }
 
@@ -1062,7 +1062,7 @@ section {
     z-index: 1;
     font-size: 14px;
     padding: 1px 0 3px 0;
-    background: #4154f1;
+    background: #0ba59d;
     color: #fff;
 }
 
@@ -1090,7 +1090,7 @@ section {
 
 .faq .accordion-button:not(.collapsed) {
     background: none;
-    color: #4154f1;
+    color: #0ba59d;
     border-bottom: 0;
 }
 
@@ -1130,8 +1130,8 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-    color: #4154f1;
-    border-color: #4154f1;
+    color: #0ba59d;
+    border-color: #0ba59d;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -1209,12 +1209,12 @@ section {
 
 .portfolio .portfolio-wrap .portfolio-info h4 {
     font-size: 20px;
-    color: #012970;
+    color: #0BA59D;
     font-weight: 700;
 }
 
 .portfolio .portfolio-wrap .portfolio-info p {
-    color: #012970;
+    color: #0BA59D;
     font-weight: 600;
     font-size: 14px;
     text-transform: uppercase;
@@ -1229,7 +1229,7 @@ section {
 
 .portfolio .portfolio-wrap .portfolio-links a {
     color: #fff;
-    background: #4154f1;
+    background: #0ba59d;
     margin: 10px 2px;
     width: 36px;
     height: 36px;
@@ -1246,7 +1246,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-    background: #5969f3;
+    background: #0dc4ba;
 }
 
 .portfolio .portfolio-wrap:hover img {
@@ -1298,11 +1298,11 @@ section {
     height: 12px;
     background-color: #fff;
     opacity: 1;
-    border: 1px solid #4154f1;
+    border: 1px solid #0ba59d;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-    background-color: #4154f1;
+    background-color: #0ba59d;
 }
 
 .portfolio-details .portfolio-info {
@@ -1404,11 +1404,11 @@ section {
     height: 12px;
     background-color: #fff;
     opacity: 1;
-    border: 1px solid #4154f1;
+    border: 1px solid #0ba59d;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-    background-color: #4154f1;
+    background-color: #0ba59d;
 }
 
 .testimonials .swiper-slide {
@@ -1503,7 +1503,7 @@ section {
     font-weight: 700;
     margin-bottom: 5px;
     font-size: 20px;
-    color: #012970;
+    color: #0BA59D;
 }
 
 .team .member .member-info span {
@@ -1555,11 +1555,11 @@ section {
     height: 12px;
     background-color: #fff;
     opacity: 1;
-    border: 1px solid #4154f1;
+    border: 1px solid #0ba59d;
 }
 
 .clients .clients-slider .swiper-pagination .swiper-pagination-bullet-active {
-    background-color: #4154f1;
+    background-color: #0ba59d;
 }
 
 
@@ -1592,14 +1592,14 @@ section {
 .recent-blog-posts .post-box .post-date {
     font-size: 16px;
     font-weight: 600;
-    color: rgba(1, 41, 112, 0.6);
+    color: #444444;
     display: block;
     margin-bottom: 10px;
 }
 
 .recent-blog-posts .post-box .post-title {
     font-size: 24px;
-    color: #012970;
+    color: #444444;
     font-weight: 700;
     margin-bottom: 18px;
     position: relative;
@@ -1621,7 +1621,7 @@ section {
 }
 
 .recent-blog-posts .post-box:hover .post-title {
-    color: #4154f1;
+    color: #0ba59d;
 }
 
 .recent-blog-posts .post-box:hover .post-img img {
@@ -1642,12 +1642,12 @@ section {
 .contact .info-box i {
     font-size: 38px;
     line-height: 0;
-    color: #4154f1;
+    color: #0ba59d;
 }
 
 .contact .info-box h3 {
     font-size: 20px;
-    color: #012970;
+    color: #0BA59D;
     font-weight: 700;
     margin: 20px 0 10px 0;
 }
@@ -1716,7 +1716,7 @@ section {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-    border-color: #4154f1;
+    border-color: #0ba59d;
 }
 
 .contact .php-email-form input {
@@ -1728,7 +1728,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-    background: #4154f1;
+    background: #0ba59d;
     border: 0;
     padding: 10px 30px;
     color: #fff;
@@ -1737,7 +1737,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-    background: #5969f3;
+    background: #0dc4ba;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1787,12 +1787,12 @@ section {
 }
 
 .blog .entry .entry-title a {
-    color: #012970;
+    color: #0BA59D;
     transition: 0.3s;
 }
 
 .blog .entry .entry-title a:hover {
-    color: #4154f1;
+    color: #0ba59d;
 }
 
 .blog .entry .entry-meta {
@@ -1837,7 +1837,7 @@ section {
 
 .blog .entry .entry-content .read-more a {
     display: inline-block;
-    background: #4154f1;
+    background: #0ba59d;
     color: #fff;
     padding: 6px 20px;
     transition: 0.3s;
@@ -1846,7 +1846,7 @@ section {
 }
 
 .blog .entry .entry-content .read-more a:hover {
-    background: #5969f3;
+    background: #0dc4ba;
 }
 
 .blog .entry .entry-content h3 {
@@ -1880,7 +1880,7 @@ section {
     top: 0;
     bottom: 0;
     width: 3px;
-    background-color: #012970;
+    background-color: #0BA59D;
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -1896,12 +1896,12 @@ section {
 }
 
 .blog .entry .entry-footer a {
-    color: #013289;
+    color: #0dc4ba;
     transition: 0.3s;
 }
 
 .blog .entry .entry-footer a:hover {
-    color: #4154f1;
+    color: #0ba59d;
 }
 
 .blog .entry .entry-footer .cats {
@@ -1960,7 +1960,7 @@ section {
     font-size: 22px;
     margin-bottom: 0px;
     padding: 0;
-    color: #012970;
+    color: #0BA59D;
 }
 
 .blog .blog-author .social-links {
@@ -2010,12 +2010,12 @@ section {
 }
 
 .blog .blog-comments .comment h5 a:hover {
-    color: #4154f1;
+    color: #0ba59d;
 }
 
 .blog .blog-comments .comment h5 .reply {
     padding-left: 10px;
-    color: #012970;
+    color: #0BA59D;
 }
 
 .blog .blog-comments .comment h5 .reply i {
@@ -2078,11 +2078,11 @@ section {
     border-radius: 4px;
     padding: 10px 20px;
     border: 0;
-    background-color: #012970;
+    background-color: #0BA59D;
 }
 
 .blog .blog-comments .reply-form .btn-primary:hover {
-    background-color: #013289;
+    background-color: #0dc4ba;
 }
 
 .blog .blog-pagination {
@@ -2102,7 +2102,7 @@ section {
 }
 
 .blog .blog-pagination li a {
-    color: #012970;
+    color: #0BA59D;
     padding: 7px 16px;
     display: flex;
     align-items: center;
@@ -2111,7 +2111,7 @@ section {
 
 .blog .blog-pagination li.active,
 .blog .blog-pagination li:hover {
-    background: #4154f1;
+    background: #0ba59d;
 }
 
 .blog .blog-pagination li.active a,
@@ -2130,7 +2130,7 @@ section {
     font-weight: 700;
     padding: 0 0 0 0;
     margin: 0 0 15px 0;
-    color: #012970;
+    color: #0BA59D;
     position: relative;
 }
 
@@ -2162,7 +2162,7 @@ section {
     font-size: 16px;
     padding: 0 15px;
     margin: -1px;
-    background: #4154f1;
+    background: #0ba59d;
     color: #fff;
     transition: 0.3s;
     border-radius: 0 4px 4px 0;
@@ -2187,12 +2187,12 @@ section {
 }
 
 .blog .sidebar .categories ul a {
-    color: #012970;
+    color: #0BA59D;
     transition: 0.3s;
 }
 
 .blog .sidebar .categories ul a:hover {
-    color: #4154f1;
+    color: #0ba59d;
 }
 
 .blog .sidebar .categories ul a span {
@@ -2217,12 +2217,12 @@ section {
 }
 
 .blog .sidebar .recent-posts h4 a {
-    color: #012970;
+    color: #0BA59D;
     transition: 0.3s;
 }
 
 .blog .sidebar .recent-posts h4 a:hover {
-    color: #4154f1;
+    color: #0ba59d;
 }
 
 .blog .sidebar .recent-posts time {
@@ -2247,7 +2247,7 @@ section {
 }
 
 .blog .sidebar .tags ul a {
-    color: #0257ee;
+    color: #0dc4ba;
     font-size: 14px;
     padding: 6px 14px;
     margin: 0 6px 8px 0;
@@ -2258,8 +2258,8 @@ section {
 
 .blog .sidebar .tags ul a:hover {
     color: #fff;
-    border: 1px solid #4154f1;
-    background: #4154f1;
+    border: 1px solid #0ba59d;
+    background: #0ba59d;
 }
 
 .blog .sidebar .tags ul a span {
@@ -2291,7 +2291,7 @@ section {
     padding: 0;
     line-height: 1;
     font-weight: 700;
-    color: #012970;
+    color: #0BA59D;
 }
 
 .footer .footer-newsletter form {
@@ -2319,14 +2319,14 @@ section {
     font-size: 16px;
     padding: 0 30px;
     margin: 3px;
-    background: #4154f1;
+    background: #0ba59d;
     color: #fff;
     transition: 0.3s;
     border-radius: 4px;
 }
 
 .footer .footer-newsletter form input[type=submit]:hover {
-    background: #5969f3;
+    background: #0dc4ba;
 }
 
 .footer .footer-top {
@@ -2361,7 +2361,7 @@ section {
     font-size: 30px;
     font-weight: 700;
     letter-spacing: 1px;
-    color: #012970;
+    color: #0BA59D;
     font-family: "Nunito", sans-serif;
     margin-top: 3px;
 }
@@ -2383,13 +2383,13 @@ section {
 }
 
 .footer .footer-top .social-links a:hover {
-    color: #012970;
+    color: #0BA59D;
 }
 
 .footer .footer-top h4 {
     font-size: 16px;
     font-weight: bold;
-    color: #012970;
+    color: #0BA59D;
     text-transform: uppercase;
     position: relative;
     padding-bottom: 12px;
@@ -2423,14 +2423,14 @@ section {
 }
 
 .footer .footer-top .footer-links ul a {
-    color: #013289;
+    color: #0dc4ba;
     transition: 0.3s;
     display: inline-block;
     line-height: 1;
 }
 
 .footer .footer-top .footer-links ul a:hover {
-    color: #4154f1;
+    color: #0ba59d;
 }
 
 .footer .footer-top .footer-contact p {
@@ -2440,14 +2440,14 @@ section {
 .footer .copyright {
     text-align: center;
     padding-top: 30px;
-    color: #012970;
+    color: #0BA59D;
 }
 
 .footer .credits {
     padding-top: 10px;
     text-align: center;
     font-size: 13px;
-    color: #012970;
+    color: #0BA59D;
 }
 
 
