Update image landing page

--- a/public/templates/css/style.css
+++ b/public/templates/css/style.css
@@ -199,7 +199,7 @@ section {
 }
 
 .header .logo img {
-    max-height: 70px;
+    max-height: 60px;
     margin-right: 6px;
 }
 
@@ -511,6 +511,8 @@ section {
 
 .hero .hero-img {
     text-align: right;
+    height: 600px;
+    width: 600px;
 }
 
 @media (min-width: 1024px) {
@@ -529,7 +531,7 @@ section {
         margin-top: 80px;
     }
     .hero .hero-img img {
-        width: 80%;
+        width: 70%;
     }
 }
 
@@ -625,6 +627,7 @@ section {
     padding: 30px 50px;
     transition: 0.5s;
     transform: scale(1.1);
+    height: 60%;
 }
 
 .values .box h3 {
